[gd_scene load_steps=6 format=3 uid="uid://bssnq7p47wudg"]

[ext_resource type="PackedScene" uid="uid://bbipqdxxcqbec" path="res://Scenes/Enemies/enemy.tscn" id="1_sq8yk"]
[ext_resource type="Script" path="res://Scripts/Enemies/EnemyMeelee.gd" id="2_h0mck"]
[ext_resource type="Texture2D" uid="uid://bp361njf4iibo" path="res://Assets/Enemies/char_enemy_Kanibozu_115x115px.png" id="3_676ci"]

[sub_resource type="ViewportTexture" id="ViewportTexture_lyru6"]
viewport_path = NodePath("Sprite3D/SubViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_ghbh6"]
viewport_path = NodePath("SubViewport")

[node name="enemy_meelee" instance=ExtResource("1_sq8yk")]
script = ExtResource("2_h0mck")
attackRange = 1.25
attackRate = 0.5
speed = 5.0
enemyDamage = 15.0

[node name="Area3D" parent="." index="2"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
collision_layer = 0

[node name="Sprite3D" parent="." index="3"]
texture = SubResource("ViewportTexture_lyru6")

[node name="Body" parent="Sprite3D/SubViewport" index="0"]
position = Vector2(100, 100)
texture = ExtResource("3_676ci")

[node name="Timer" type="Timer" parent="." index="6"]

[node name="SpawnParticles" parent="." index="8"]
texture = SubResource("ViewportTexture_ghbh6")

[connection signal="body_entered" from="Area3D" to="." method="onArea3dBodyEntered"]
[connection signal="body_exited" from="Area3D" to="." method="onArea3dBodyExited"]
[connection signal="timeout" from="Timer" to="." method="on_timer_timeout"]
